<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LOCKED</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tittle1">Break In Alerts</string>
    <string name="tittle2">Safety</string>
    <string name="tittle3">Grant Permission</string>
    <string name="description">:)</string>
    <string name="descriptionIntro1">Whenever someone enters an incorrect PIN, we log the time and date with secret photo</string>
    <string name="descriptionIntro2">Hide your photo and video to private space</string>
    <string name="descriptionIntro3">Grant permission storage and camera too hide photo or file and contact and call permission for vault</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="unlock">Unlock</string>
    <string name="share">Share</string>
    <string name="move">Move</string>
    <string name="info">Info</string>
    <string name="save">save</string>
    <string name="addFile">Add file</string>
    <string name="items">items</string>
    <string name="selected">selected</string>
    <string name="imageSelected">Image Selected</string>
    <string name="noImageSelected">No image selected</string>
    <string name="noVideoSelected">No video selected</string>
    <string name="haveNoImageInThisFolder">No images in this folder</string>
    <string name="haveNoVideoInThisFolder">No videos in this folder</string>
    <string name="noneIsSelected">None is selected</string>
    <string name="permissionGranted">Permission granted</string>
    <string name="permissionDenied">Permission denied</string>
    <string name="permissionNeeded">Permission needed</string>
    <string name="messagePermissionNeeded">Need permission to use app</string>
    <string name="pressBackAgaint">Press back again to exit the application!</string>
    <string name="deleteAllDetails">Are you sure to delete the all details?</string>
    <string name="login">Login</string>
    <string name="useFingerprint">Use your fingerprint to login to your app</string>
    <string name="forgotPin">Forget PIN?</string>
    <string name="pleaseCreateANewPin">Please, create a new PIN!</string>
    <string name="fingerprintUnavailable">The biometric sensor is currently unavailable</string>
    <string name="haveNoFingerprintSendor">The divide do not have a fingerprint sensor</string>
    <string name="haveNoFingerprintSaved">Your divide do not have any fingerprint saved. Please check security setting</string>
    <string name="digitOfPin">Enter a PIN of 6 digits</string>
    <string name="wrongPin">Wrong PIN!</string>
    <string name="enterANewPin">Enter a new PIN</string>
    <string name="confirmPin">Confirm your PIN</string>
    <string name="changePinSuccessfully">Change PIN successfully!</string>
    <string name="enterYourOldPin">Enter your old PIN</string>
    <string name="createANewPin">Create a new PIN</string>
    <string name="enterYourPin">Enter your PIN</string>
    <string name="pleaseWriteYourAnswer">Please write your answer!</string>
    <string name="changeQuestionSuccessfully">Change security question successfully</string>
    <string name="answerIsWrong">Answer is wrong</string>
    <string name="securityQuestion1">What was your childhood nickname?</string>
    <string name="securityQuestion2">What is your favorite color?</string>
    <string name="securityQuestion3">In which city were you born?</string>
    <string name="securityQuestion4">What is your dream work?</string>
    <string name="securityQuestion5">What is your favorite movie?</string>
    <string name="haveToCreateQuestion">You have to create a security question to use app. Press back again to exit the application!</string>
    <string name="unlockSuccessfully">Unlock successfully</string>
    <string name="fingerprintTurnOff">Fingerprint has been turned off</string>
    <string name="haveNoImage">No images</string>
    <string name="haveNoVideo">No videos</string>
    <string name="sharePhotoAndView">Share photo and video</string>
    <string name="deleteFolder">Delete folder successfully</string>
    <string name="createFolderSuccessfully">Create folder successfully</string>
    <string name="folderExist">Folder exist</string>
    <string name="times">times</string>
    <string name="time">time</string>
    <string name="videoVault">Video Vault</string>
    <string name="photoVault">Photo Vault</string>
    <string name="securityQuestion">Security question</string>
    <string name="settings">Settings</string>
    <string name="breakInAlert">Break in alert</string>
    <string name="shareToFriends">Share to Friends</string>
    <string name="likeApp">Like App</string>
    <string name="aboutUs">About Us</string>
    <string name="incorrectCodeEntries">Incorrect code entries</string>
    <string name="moveToFolder">Move to folder</string>
    <string name="details">Details</string>
    <string name="title">Title:</string>
    <string name="size">Size:</string>
    <string name="ratio">Ratio:</string>
    <string name="path">Path:</string>
    <string name="areYouSureToDeleteThisFolder">Are you sure to delete this folder?</string>
    <string name="createNewAlbum">Create New Album</string>
    <string name="enterAlbumName">Enter Album Name</string>
    <string name="enterWrongPassword">Enter wrong password</string>
    <string name="importVideos">Import Videos</string>
    <string name="importPhotos">Import Photos</string>
    <string name="deleteAll">DELETE ALL</string>
    <string name="changePin">Change PIN</string>
    <string name="changeSecurityQuestion">Change security question</string>
    <string name="captureIntruders">Capture intruders</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="timesToTakePictures">Times of wrong password to take pictures</string>
    <string name="createSecurityQuestion">Create your security question</string>
    <string name="selectQuestion">Select question</string>
    <string name="yourAnswer">Your answer</string>
    <string name="enterAPasscode">Enter a passcode of 6 digits</string>
    <string name="noFileFound">No Files Found</string>
    <string name="clickAddButton">Click on add button to add files</string>
    <string name="grantPermission">Grant permissions</string>
    <string name="deleteFile">Are you sure to delete?</string>
    <string name="deleteDefaultFolder">Can not delete default folder</string>
    <string name="haveNoFolder">Have no another folder. Please create more folder to move.</string>
    <string name="attention">Attention!</string>
    <string name="deleteFileRoot">The application will make a copy of your file. Please click "Allow" to delete the original file and complete the image hiding.</string>
    <string name="deleteFileRootVideo">The application will make a copy of your file. Please click "Allow" to delete the original file and complete the video hiding.</string>
    <string name="sorryCamera">Sorry your device cannot use this feature.</string>
    <string name="loading">Loading...</string>
    <string name="neverAskAgaint">You have denied app permission, please allow app permission at settings</string>
    <string name="ad_attribution">Ad</string>
    <string name="deny">Deny</string>
  <!--  <string name="id_admob">ca-app-pub-3940256099942544~3347511713</string>
    <string name="id_native">ca-app-pub-3940256099942544/2247696110</string>-->

    <string name="id_admob">ca-app-pub-6299940969444502~7864878770</string>
    <string name="id_native">ca-app-pub-6299940969444502/8029557976</string>
</resources>