<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bottom_sheet"
    android:orientation="vertical"
    android:paddingStart="@dimen/_14sdp"
    android:paddingEnd="@dimen/_14sdp"
    android:paddingTop="@dimen/_14sdp"
    android:paddingBottom="@dimen/_6sdp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#FF5722"
            app:cardCornerRadius="@dimen/_10sdp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/createNewAlbum"
            android:textColor="#f8364e"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/albumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="@dimen/_6sdp"
            android:ellipsize="end"
            android:hint="@string/enterAlbumName"
            android:maxLines="1"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/albumName"
            android:layout_marginTop="@dimen/_8sdp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_weight="1"
                android:backgroundTint="#4A4E63"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_weight="1"
                android:backgroundTint="#f8364e"
                android:text="@string/create" />

        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>